# BriefingRoom

./: .cursorrules  .example.env  .gitignore  CLAUDE.md  ENHANCEMENTS.md  README.md  TECHNOLOGY-BEST-PRACTICES.md  docker-compose.yml  project-spec.md
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  storage.py
backend/app/api/: auth.py  briefing.py  daily.py  emotions.py  health.py  interviews.py  review.py  transcripts.py  vapi.py
backend/app/crew/: briefing.py  review.py
backend/app/models/: __init__.py  interview.py  interview_note.py  transcript.py
backend/app/services/: file_storage.py  transcript_service.py  url_handler.py
backend/tests/: conftest.py  test_auth.py  test_crew.py  test_daily.py  test_db.py  test_generate_briefing.py  test_health.py  test_interviews.py  test_models.py  test_transcripts.py  test_vapi.py
docs/: MANUAL_TESTING_GUIDE.md  MULTI_INPUT_PLAN.md  STORAGE_SETUP.md  architecture.md  authentication.md  crewai-expansion-plan.md  daily-setup.md  daily-transcription-implementation.md  daily-transcription-status.md  emotion-detection-feasability.md  vapi-integration-summary.md  vapi-integration.md
docs/diagrams/: component-diagram.md  erd.md  system-architecture.md
frontend/: .prettierignore  .prettierrc  Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json  vitest.config.ts
frontend/src/: app.html  setup.ts
frontend/src/__tests__/routes/: +page.server.test.ts
frontend/src/lib/: api.ts  briefing.ts  daily.ts  emotionDetection.ts  emotionStorage.ts  interviews.ts  review.ts  transcriptStorage.ts  transcripts.ts  types.ts  vapi.ts
frontend/src/lib/__tests__/: DailyCall.test.ts  VapiOrb.test.ts  api.test.ts  briefing.test.ts  daily.test.ts  interviews.test.ts
frontend/src/lib/components/: ClosedCaptions.svelte  DailyCall.svelte  EmotionOverlay.svelte  MultiInput.svelte  TranscriptDownload.svelte  VapiOrb.svelte
frontend/src/lib/components/__tests__/: ClosedCaptions.test.ts  DailyCall.test.ts  VapiOrb.test.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/__tests__/: +page.server.test.ts
frontend/src/routes/__tests__/candidate/: +page.server.test.ts
frontend/src/routes/candidate/: +page.server.ts  +page.svelte
frontend/src/routes/candidate/__tests__/: +page.server.test.ts
frontend/src/routes/host/: +page.server.ts  +page.svelte
frontend/src/routes/host/__tests__/: +page.server.test.ts  +page.svelte.test.ts
scripts/: generate_jwt_tokens.py  update_jwt_keys.py
supabase/migrations/: 20240101000000_init_schema.sql  20240102000000_add_interview_transcripts.sql  20240102000001_add_transcript_data_jsonb.sql  20240103000000_add_input_metadata.sql  20240103000001_make_text_columns_nullable.sql  20240103000002_setup_storage_policies.sql  20241210000000_add_emotion_detections.sql
